# sniper

./: Cargo.toml  README.md  RESTRUCTURE_SUMMARY.md  config.json
.github/workflows/: ci.yml
migrations/: 20251121152815_create_schema.sql
src/: config.rs  data.rs  db.rs  engine.rs  exchange.rs  grid.rs  main.rs  notification.rs  position_manager.rs  rest_client.rs  sign.rs  signal.rs  volatility.rs
